llvm-toolchain-3.4 (1:3.4.2-7~exp1) experimental; urgency=medium

  * Co installation of clang (Closes: #736057)
    - scan-build => scan-build-3.4
    - scan-view => scan-view-3.4
    - asan_symbolize => asan_symbolize-3.4
  * Remove of pollycc

 -- Sylvestre Ledru <sylvestre@debian.org>  Sat, 02 Aug 2014 13:12:09 +0200

llvm-toolchain-3.4 (1:3.4.2-6) unstable; urgency=medium

  * If the version of gcc is too old, force the usage of gcc 4.8
  * Replace $(CURDIR)/debian/tmp by a variable
  * Move the polly installation in the dh_auto_install rules instead
    of using *.install files. In llvm.org/apt/, I have to sometime disable
    polly
  * hurd-EIEIO-undef.diff: try to undef an errno.h to fix the ftbfs
  * clang-X suggests clang-X-doc (Closes: #755922)
  * Manage all files using .in mecanism. It will simplify the upgrade of
    version + file names 

 -- Sylvestre Ledru <sylvestre@debian.org>  Wed, 23 Jul 2014 13:02:56 +0200

llvm-toolchain-3.4 (1:3.4.2-5) unstable; urgency=medium

  * For i386, gcc 4.9 updated its paths to i586-linux-gnu (i486-linux-gnu
    previously). Adding this triple to the list of search (Closes: #754963)
  * Clang will now show the full version. Example: 3.5.0-svn213052-1~exp1

 -- Sylvestre Ledru <sylvestre@debian.org>  Fri, 18 Jul 2014 17:50:51 +0200

llvm-toolchain-3.4 (1:3.4.2-4) unstable; urgency=medium

  * Create a empty directory to make dh_install happy
    (Closes: #752583)
  * Actually, silent-MCJIIT-tests.diff tests are still failing under i386

 -- Sylvestre Ledru <sylvestre@debian.org>  Tue, 24 Jun 2014 15:26:51 -0700

llvm-toolchain-3.4 (1:3.4.2-3) unstable; urgency=medium

  * Ship the compiler-rt static libraries in libclang-3.4-dev
  * Running tests respect DEB_BUILD_OPTIONS=parallel=X
   (Closes: #751943)
  * Fix FTBFS on powerpc and powerpcspe (Closes: #733890)
  * Broken library symlink fixed in lldb-3.4 (Closes: #715130)
  * Fix --use-cc when no absolute path is provided.