@@ -5,6 +5,7 @@ llvm-toolchain-3.4 (1:3.4.2-7~exp1) experimental; urgency=medium
     - scan-view => scan-view-3.4
     - asan_symbolize => asan_symbolize-3.4
   * Remove of pollycc
+  * clang alternatives are managed by llvm-defaults
 
  -- Sylvestre Ledru <sylvestre@debian.org>  Sat, 02 Aug 2014 13:12:09 +0200
 
